--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "@antfu/ni": "^0.14.0",
     "@antfu/utils": "^0.5.1",
     "@types/node": "^17.0.23",
+    "ansis": "^3.12.0",
     "bumpp": "^7.1.1",
     "eslint": "^8.13.0",
     "esno": "^0.14.1",
     "fast-glob": "^3.2.11",
     "path-list-to-tree": "^1.1.1",
-    "picocolors": "^1.0.0",
     "pkgroll": "^1.0.4",
     "typescript": "^4.6.3"
   }
